<resources>
    <string name="app_name">Recipes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Recipes</string>
    <string name="title_notifications">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="comment_added_message">Comment added</string>
    <string name="note_added_message">Note saved</string>
    <string name="favorite_added_message">Favourite status changed</string>
    <string name="shop_list_added_message">Added ingredients to the shop list</string>
    <string name="empty_note">Note is empty</string>
    <string name="empty_comment">Comment is empty</string>
    <string name="not_ingredients">Not enough ingredients</string>
    <string name="login_req">Username and password are required</string>
    <string name="login_success">Login successful</string>
    <string name="wrong_info">Not all data filled</string>
    <string name="wrong_password">Passwords do not match</string>
    <string name="wrong_email">Incorrect e-mail</string>
    <string name="registration_success">Registration successful</string>
    <string name="miss_ingredients">Missing ingredients</string>


    <string name="title_hint">Recipe Title</string>
    <string name="description_hint">Recipe Description</string>
    <string name="cooking_time_hint">Cooking Time</string>
    <string name="instructions_hint">Instructions</string>


    <string name="remove">X</string>
    <string name="quantity">Quantity</string>
    <string name="add_ingredient">Add</string>

    <string name="listOfRecipes">List of recipes</string>
    <string name="CreateRecipe">Create recipe</string>
    <string name="title">Title</string>
    <string name="titleEdit">Type title of the recipe</string>
    <string name="description">Description</string>
    <string name="descriptionEdit">Type description of the recipe</string>
    <string name="cookingTime">Cooking Time</string>
    <string name="cookingTimeEdit">Type cooking time of the recipe</string>
    <string name="instruction">Instruction</string>
    <string name="instructionEdit">Type instruction for the recipe</string>
    <string name="addIngredient">Add indgredient</string>
    <string name="confirm">Confirm</string>
    <string name="return0">Return</string>
    <string name="fridge">Fridge</string>
    <string name="displayRecipes">Display recipes</string>
    <string name="drawRecipe">Draw a recipe</string>
    <string name="logIn">Log In</string>
    <string name="username">Username</string>
    <string name="usernameEdit">Type your username</string>
    <string name="password">Password</string>
    <string name="passwordEdit">Type your password</string>
    <string name="email">E-mail</string>
    <string name="emailEdit">Type your e-mail</string>
    <string name="password2">Confirm the password</string>
    <string name="password2Edit">Type your password again</string>
    <string name="register">Register</string>
    <string name="login2">Back to login</string>
    <string name="userPanel">User panel</string>
    <string name="shoppingList">Shopping list</string>
    <string name="favouriteRecipes">Favourite recipes</string>
    <string name="yourRecipes">Your recipes</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="ingredients">Ingredients</string>
    <string name="note">Note</string>
    <string name="noteEdit">Type your note</string>
    <string name="newComment">New comment</string>
    <string name="commentEdit">Type your comment</string>
    <string name="ingredientName">Ingredient name</string>


    <string-array name="cuisine_types">
        <item>Włoska</item>
        <item>Japońska</item>
        <item>Indyjska</item>
        <item>Amerykańska</item>
        <item>Polska</item>
        <item>Hiszpańska</item>
        <item>Chińska</item>
    </string-array>
    <string-array name="rating_array">
        <item>Rate</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="language_options">
        <item>Polish</item>
        <item>English</item>
    </string-array>
    <string-array name="theme_options">
        <item>Day</item>
        <item>Night</item>
    </string-array>

</resources>